fix cors-4